test-span/tests/snapshots/tests__traced_span_tests__async_tracing_macro_works-2.snap
---
source: test-span/tests/tests.rs
assertion_line: 68
expression: spans

---
{
  "name": "tests::traced_span_tests::root",
  "record": {
    "entries": [],
    "metadata": {
      "name": "root",
      "target": "tests::traced_span_tests",
      "level": "DEBUG",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": []
      }
    }
  },
  "children": {
    "tests::traced_span_tests::do_async_stuff - 1": {
      "name": "tests::traced_span_tests::do_async_stuff",
      "record": {
        "entries": [
          [
            "message",
            "here i am!"
          ],
          [
            "message",
            "in a separate context!"
          ],
          [
            "number",
            52
          ]
        ],
        "metadata": {
          "name": "do_async_stuff",
          "target": "tests::traced_span_tests",
          "level": "INFO",
          "module_path": "tests::traced_span_tests",
          "fields": {
            "names": []
          }
        }
      },
      "children": {
        "my_crate::an_other_target::do_async_stuff2 - 2": {
          "name": "my_crate::an_other_target::do_async_stuff2",
          "record": {
            "entries": [
              [
                "number",
                42
              ],
              [
                "message",
                "here i am again!"
              ]
            ],
            "metadata": {
              "name": "do_async_stuff2",
              "target": "my_crate::an_other_target",
              "level": "INFO",
              "module_path": "tests::traced_span_tests",
              "fields": {
                "names": [
                  "number"
                ]
              }
            }
          },
          "children": {}
        }
      }
    },
    "tests::traced_span_tests::do_async_stuff - 3": {
      "name": "tests::traced_span_tests::do_async_stuff",
      "record": {
        "entries": [
          [
            "message",
            "here i am!"
          ],
          [
            "message",
            "in a separate context!"
          ],
          [
            "number",
            52
          ]
        ],
        "metadata": {
          "name": "do_async_stuff",
          "target": "tests::traced_span_tests",
          "level": "INFO",
          "module_path": "tests::traced_span_tests",
          "fields": {
            "names": []
          }
        }
      },
      "children": {
        "my_crate::an_other_target::do_async_stuff2 - 4": {
          "name": "my_crate::an_other_target::do_async_stuff2",
          "record": {
            "entries": [
              [
                "number",
                42
              ],
              [
                "message",
                "here i am again!"
              ]
            ],
            "metadata": {
              "name": "do_async_stuff2",
              "target": "my_crate::an_other_target",
              "level": "INFO",
              "module_path": "tests::traced_span_tests",
              "fields": {
                "names": [
                  "number"
                ]
              }
            }
          },
          "children": {}
        }
      }
    }
  }
}
