test-span/tests/snapshots/tests__traced_span_tests__async_tracing_macro_works.snap
---
source: test-span/tests/tests.rs
assertion_line: 42
expression: logs

---
[
  [
    "message",
    "here i am!"
  ],
  [
    "message",
    "in a separate context!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am!"
  ],
  [
    "message",
    "in a separate context!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ]
]
