test-span/tests/snapshots/tests__traced_span_tests__async_tracing_macro_works_with_filter_parent_span.snap
---
source: test-span/tests/tests.rs
assertion_line: 83
expression: logs

---
[
  [
    "message",
    "here i am!"
  ],
  [
    "message",
    "in a separate context!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ],
  [
    "message",
    "here i am!"
  ],
  [
    "message",
    "in a separate context!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ]
]
