test-span/tests/snapshots/tests__traced_span_tests__tracing_works.snap
---
source: test-span/tests/tests.rs
assertion_line: 102
expression: logs

---
[
  [
    "message",
    "here i am!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ],
  [
    "message",
    "debug: here i am again!"
  ],
  [
    "message",
    "here i am!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ],
  [
    "message",
    "debug: here i am again!"
  ]
]
